--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <script type="text/javascript" src="app.js"></script>
     <title> Login to Spotify</title>
-    <h1> To create your playlist, Login to Spotify. </h1>
+    <h1> To create your playlist, Login to the Spotify. </h1>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <style type="text/css">
       #login, #loggedin {
