--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -21,7 +21,7 @@
       }
       .outer{
         background:white;
-        border: 5px solid rgb(30, 182, 65);
+        border: 5px solid rgb(126, 126, 190);;
         border-radius: 50px;
         padding: 20px;
         text-align: center;
@@ -172,6 +172,14 @@
 
   <body>
     <h1 id="body-header"> boombox </h1>
+    <ul class = "navLinks" id ="btn">
+         <li> <a href="/home" id="margHome" id="Sptbtn" class="fas fa-home iconApp"></a></li>
+                   
+         <li><a href="/explore" id="globe" class="fas fa-globe-americas iconApp"></a></li>
+    </ul>
+    <div class = aboutBoombox>
+          <h3>BoomBox helps bring some positivity into your music taste. Let's get started!</h3>
+    </div>
     <div class="container outer">
         <h3 id="playlist-create"> To create your playlist, login to Spotify. </h3 >
       <div id="login">
