--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -175,7 +175,7 @@
     <ul class = "navLinks" id ="btn">
          <li> <a href="/home" id="margHome" id="Sptbtn" class="fas fa-home iconApp"></a></li>
                    
-         <li><a href="/explore" id="globe" class="fas fa-globe-americas iconApp"></a></li>
+         <li><a href="https://boombox-1c217.firebaseapp.com/explore" id="globe" class="fas fa-globe-americas iconApp"></a></li>
     </ul>
     <div class = aboutBoombox>
           <h3>BoomBox helps bring some positivity into your music taste. Let's get started!</h3>
